# pao-project

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
include/CustomPlot/: qcustomplot.cpp  qcustomplot.h
src/: MyApp.cpp  MyApp.h  mainwindow.cpp
src/controller/: Controller.cpp  Controller.h  LocatorController.cpp  LocatorController.h
src/controller/business/: BusinessController.cpp  BusinessController.h
src/controller/core/: AbstractController.cpp  AbstractController.h
src/controller/error/: ErrorController.cpp  ErrorController.h
src/controller/storage/: StorageController.cpp  StorageController.h  StorageSaveWorker.cpp  StorageSaveWorker.h
src/controller/storage/core/: AbstractController.h
src/controller/window/: WindowController.cpp  WindowController.h
src/model/core/: AbstractItem.cpp  AbstractItem.h  Category.cpp  Category.h  Sensor.cpp  Sensor.h
src/model/datagen/: AbstractDataGen.cpp  AbstractDataGen.h  DataGen.cpp  DataGenObj.cpp  DataGenObj.h  DataGeneratorWorker.cpp  DataGeneratorWorker.h  LinearDataGen.cpp  LinearDataGen.h  RandomDataGen.cpp  RandomDataGen.h
src/model/exception/: BaseException.cpp  BaseException.h  FatalException.cpp  FatalException.h  NormalException.cpp  NormalException.h
src/model/storage/: StorageObject.cpp  StorageObject.h
src/model/visitor/: AddItem.cpp  AddItem.h  DeleteItem.cpp  DeleteItem.h  IConstVisitor.h  IVisitor.h  deleteItem.cpp
src/tests/: testDavide.h
src/utility/: Logger.cpp  Logger.h  StorageUtility.cpp  StorageUtility.h
src/utility/datagenerator/: RandomDataGenerator.cpp  RandomDataGenerator.h
src/utility/distributionType/: DistributionUtility.cpp  DistributionUtility.h
src/utility/event/: EventHandler.h
src/utility/icons/: Icons.cpp  Icons.h
src/utility/limitedqmap/: LimitedQMap.h
src/utility/logger/: Logger.cpp  Logger.h
src/utility/storage/: StorageUtility.cpp  StorageUtility.h  StorageWorker.cpp  StorageWorker.h
src/view/: AbstractContainer.cpp  AbstractContainer.h  AbstractView.cpp  AbstractView.h  GroupListView.h  MainContentContainer.cpp  MainContentContainer.h  MainContentWidget.cpp  MainContentWidget.h  MainView.cpp  MainView.h  ModifyView.cpp  ModifyView.h  SidebarContainer.cpp  SidebarContainer.h  SidebarWidget.cpp  SidebarWidget.h  SingleView.h
src/view/containers/: MainContentContainer.cpp  MainContentContainer.h  SidebarContainer.cpp  SidebarContainer.h
src/view/core/: AbstractContainer.cpp  AbstractContainer.h  AbstractGraphicalElement.cpp  AbstractGraphicalElement.h  AbstractView.cpp  AbstractView.h  AbstractWidget.cpp  AbstractWidget.h
src/view/utility/: CustomElements.cpp  CustomElements.h
src/view/views/: AbstractSingleView.cpp  AbstractSingleView.h  CreateView.cpp  CreateView.h  DefaultView.cpp  DefaultView.h  GroupListView.cpp  GroupListView.h  ModifyView.cpp  ModifyView.h  SettingsView.cpp  SettingsView.h  SingleView.cpp  SingleView.h  SingleViewGroup.cpp  SingleViewGroup.h  SingleViewSensor.cpp  SingleViewSensor.h
src/view/views/Editor/: EditorView.cpp  EditorView.h
src/view/views/SingleView/: SingleView.cpp  SingleView.h
src/view/widgets/: AbstractFormWidget.cpp  AbstractFormWidget.h  ChartHandler.cpp  ChartHandler.h  GroupItemWidget.cpp  GroupItemWidget.h  InformationWidget.cpp  InformationWidget.h  RealtimeChart.cpp  RealtimeChart.h  SearchBar.cpp  SearchBar.h  SensorFormWidget.cpp  SensorFormWidget.h  SidebarLowControlWidget.cpp  SidebarLowControlWidget.h
src/view/widgets/Editor/: AbstractFormWidget.cpp  AbstractFormWidget.h  CategoryFormWidget.cpp  CategoryFormWidget.h  ItemEditor.cpp  ItemEditor.h  SensorFormWidget.cpp  SensorFormWidget.h
src/view/widgets/GroupItem/: GroupItemRender.cpp  GroupItemRender.h  GroupItemWidget.cpp  GroupItemWidget.h
src/view/widgets/SingleWidget/: SingleCategoryWidget.cpp  SingleCategoryWidget.h  SingleSensorWidget.cpp  SingleSensorWidget.h  SingleViewGroup.cpp  SingleViewGroup.h  SingleWidgetRender.cpp  SingleWidgetRender.h
